# SAH

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  config.txt
include/: Lens.hpp  LoadObj.hpp  Triangle.hpp  bvh.hpp  constants.hpp  random.hpp
src/: Lens.cpp  LoadObj.cpp  Triangle.cpp  bvh.cpp  main.cpp  random.cpp
